--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ivan Caldarella">
     <title>Giornata al museo</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Una giornata al museo</h1>
+    </header>
+    <main>
+    </main>
 </body>
+
 </html>
