--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Una giornata al museo</h1>
     </header>
     <main>
+        <h2>1. Il dipinto che mi ha colpito di più</h2>
     </main>
 </body>
 
