Create le sezioni principali,.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
         <h1>Una giornata al museo</h1>
     </header>
     <main>
+        <section class="dipinto">
         <h2>1. Il dipinto che mi ha colpito di più</h2>
+        </section>
+        <section class="scultura">
+            <h2>2. Un'antica scultura</h2>
+        </section>
+        <section class="cose-imparate">
+            <h3>3. Le cose che ho imparato oggi:</h3>
+            <ul>
+                <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
+                <li>Molti dipinti nascondono simboli e significati nascosti</li>
+                <li>Ogni opera ha una storia antica</li>
+            </ul>
+        </section>
     </main>
+    <footer>
+        &#169; 2025 Insegnante di HTML
+    </footer>
 </body>
 
 </html>
