Aggiunte le immagini, tag figure e didascalie.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
     </header>
     <main>
         <section class="dipinto">
-        <h2>1. Il dipinto che mi ha colpito di più</h2>
+            <h2>1. Il dipinto che mi ha colpito di più</h2>
+            <figure>
+                <img src="img/quadro.png" alt="Ritratto di un frate">
+                <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
+            </figure>
         </section>
         <section class="scultura">
             <h2>2. Un'antica scultura</h2>
+            <figure>
+                <img src="img/scultura.png" alt="Scultura di un guerriero romano">
+                <figcaption>Scultura romana in marmo esposta nella sala archeologica.</figcaption>
+            </figure>
         </section>
         <section class="cose-imparate">
             <h3>3. Le cose che ho imparato oggi:</h3>
