--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <img src="img/quadro.png" alt="Ritratto di un frate">
                 <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
             </figure>
+            <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio
+                raffigurato. &#200; come se raccontasse una storia senza parole.</p>
         </section>
         <section class="scultura">
             <h2>2. Un'antica scultura</h2>
@@ -26,6 +28,8 @@
                 <img src="img/scultura.png" alt="Scultura di un guerriero romano">
                 <figcaption>Scultura romana in marmo esposta nella sala archeologica.</figcaption>
             </figure>
+            <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e
+                dell'armatura erano incredibilmente realistici.</p>
         </section>
         <section class="cose-imparate">
             <h3>3. Le cose che ho imparato oggi:</h3>
